--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
           <path id="Polígono_1" data-name="Polígono 1" d="M15.406,4.468a3,3,0,0,1,5.189,0L33.383,26.494A3,3,0,0,1,30.789,31H5.211a3,3,0,0,1-2.594-4.506Z" transform="translate(53 14) rotate(90)" fill="#fff" />
         </svg>
       </button>
-      <button class="pause disabled">
+      <button class="pause inative">
         <svg id="pause.svg" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
           <circle class="elipse" data-name="Elipse 4" cx="32" cy="32" r="32" fill="#f79315" />
           <rect id="Retângulo_7" data-name="Retângulo 7" width="8" height="30" rx="3" transform="translate(36 17)" fill="#fff" />
           <rect id="Retângulo_8" data-name="Retângulo 8" width="8" height="30" rx="3" transform="translate(20 17)" fill="#fff" />
         </svg>
       </button>
-      <button class="reset disabled">
+      <button class="reset inative">
         <svg id="reset.svg" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
           <circle class="elipse" data-name="Elipse 5" cx="32" cy="32" r="32" fill="#f79315" />
           <g id="Elipse_6" data-name="Elipse 6" transform="translate(14 14)" fill="none" stroke="#fff" stroke-width="5">
