function formartTime was change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Cronômetro</h1>
       <img src="img/clock.svg" alt="">
     </div>
-    <div class="time-wrapper">
+    <div class="time-wrapper" id="counter">
       <span class="hours">00</span>
       <span class="colon">:</span>
       <span class="minutes">00</span>
