--- a/index.html
+++ b/index.html
@@ -12,43 +12,10 @@
 
 <body>
   <main>
-    <div class="name-page">
-      <h1>Cronômetro</h1>
-      <img src="img/clock.svg" alt="">
+    <div class="menu">
+      <a href="stopwatch.html">cronômetro <img src="img/clock.svg" alt=""></a>
+      <a href="timer.html">timer <img src="img/timer.svg" alt=""></a>
     </div>
-    <div class="time-wrapper" id="counter">
-      <span class="hours">00</span>
-      <span class="colon">:</span>
-      <span class="minutes">00</span>
-      <span class="colon">:</span>
-      <span class="seconds">00</span>
-    </div>
-    <div class="button-wrapper">
-      <button class="start">
-        <svg id="start.svg" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
-          <circle class="elipse" data-name="Elipse 3" cx="32" cy="32" r="32" fill="#f79315" />
-          <path id="Polígono_1" data-name="Polígono 1" d="M15.406,4.468a3,3,0,0,1,5.189,0L33.383,26.494A3,3,0,0,1,30.789,31H5.211a3,3,0,0,1-2.594-4.506Z" transform="translate(53 14) rotate(90)" fill="#fff" />
-        </svg>
-      </button>
-      <button class="pause inative">
-        <svg id="pause.svg" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
-          <circle class="elipse" data-name="Elipse 4" cx="32" cy="32" r="32" fill="#f79315" />
-          <rect id="Retângulo_7" data-name="Retângulo 7" width="8" height="30" rx="3" transform="translate(36 17)" fill="#fff" />
-          <rect id="Retângulo_8" data-name="Retângulo 8" width="8" height="30" rx="3" transform="translate(20 17)" fill="#fff" />
-        </svg>
-      </button>
-      <button class="reset inative">
-        <svg id="reset.svg" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
-          <circle class="elipse" data-name="Elipse 5" cx="32" cy="32" r="32" fill="#f79315" />
-          <g id="Elipse_6" data-name="Elipse 6" transform="translate(14 14)" fill="none" stroke="#fff" stroke-width="5">
-            <circle cx="18" cy="18" r="18" stroke="none" />
-            <circle cx="18" cy="18" r="15.5" fill="none" />
-          </g>
-          <rect class="elipse" data-name="Retângulo 9" width="15" height="13" transform="translate(11.216 23.77) rotate(3)" fill="#f79315" />
-          <path id="Polígono_2" data-name="Polígono 2" d="M8.8,2.755a2,2,0,0,1,3.4,0l6.914,11.194A2,2,0,0,1,17.414,17H3.586a2,2,0,0,1-1.7-3.051Z" transform="matrix(-0.766, -0.643, 0.643, -0.766, 22.279, 38.391)" fill="#fff" />
-        </svg>
-      </button>
-      <div>
   </main>
 
   <script src="script.js"></script>
