--- a/timer.html
+++ b/timer.html
@@ -18,11 +18,11 @@
     </div>
 
     <div class="time-wrapper">
-      <input type="text" id="hours" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
+      <input type="tel" id="hours" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
       <span class="colon">:</span>
-      <input type="text" id="minutes" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
+      <input type="tel" id="minutes" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
       <span class="colon">:</span>
-      <input type="text" id="seconds" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
+      <input type="tel" id="seconds" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
     </div>
 
     <div class="button-wrapper">
@@ -50,7 +50,8 @@
           <path id="Polígono_2" data-name="Polígono 2" d="M8.8,2.755a2,2,0,0,1,3.4,0l6.914,11.194A2,2,0,0,1,17.414,17H3.586a2,2,0,0,1-1.7-3.051Z" transform="matrix(-0.766, -0.643, 0.643, -0.766, 22.279, 38.391)" fill="#fff" />
         </svg>
       </button>
-      <div>
+    </div>
+    <button class="btn-notification">Notifique me!</button>
   </main>
 
   <script src="timer.js"></script>
