img timer changed

--- a/timer.html
+++ b/timer.html
@@ -14,15 +14,15 @@
   <main>
     <div class="name-page">
       <h1>Timer</h1>
-      <img src="img/clock.svg" alt="">
+      <img src="img/timer.svg" alt="">
     </div>
 
     <div class="time-wrapper">
-      <input type="tel" id="hours" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
+      <input type="tel" id="hours" maxlength="2">
       <span class="colon">:</span>
-      <input type="tel" id="minutes" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
+      <input type="tel" id="minutes" maxlength="2">
       <span class="colon">:</span>
-      <input type="tel" id="seconds" maxlength="2" onkeypress="if (!isNaN(String.fromCharCode(window.event.keyCode))) return true; else return false;">
+      <input type="tel" id="seconds" maxlength="2">
     </div>
 
     <div class="button-wrapper">
